kdebase-runtime (4:3.97.0-2) experimental; urgency=low

  * Replace the meta-package kdebase-workspace with the former content of the
    now removed kdebase-runtime-bin.
  * Add "-Wl,-z" to LDFLAGS to fail if there are missing symbols.

 -- Armin Berres <trigger+debian@space-based.de>  Fri, 14 Dec 2007 23:34:02 +0100

kdebase-runtime (4:3.97.0-1) experimental; urgency=low

  * New upstream release:
    - Bump build-dep to >=4:3.97.0.
    - Add epoch to kdepimlibs build-dep.
    - Update *.install files.
  * Update Standards-Version to 3.7.3.
  * khelpenter still needs htdig, add Depends on it.
  * Add export LDFLAGS+="-Wl,--as-needed" in rules to make dpkg-shlibdeps
    happier. 

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Fri, 07 Dec 2007 17:31:14 +0100

kdebase-runtime (4:3.96.0-2) experimental; urgency=low

  * kdebase-runtime-bin-kde4 must be Arch: any. (Closes: #452538)

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Fri, 23 Nov 2007 18:51:07 +0100

kdebase-runtime (4:3.96.0-1) experimental; urgency=low

  *  New upstream release.

  +++ Changes by Armin Berres:

  * Depend on up to date kdepimlibs5-dev.
  * Split kdebase-runtime-data-common off which contains conflicting files with KDE3's
    kdebase-data package. kdebase-runtime-data-common will be installed if
    KDE3's kdebase-data is not installed.
  * Split out kdebase-runtime-bin-kde4 which contains files which can be
    provided by KDE3 or KDE4.
  * kdebase-runtime-data must replace kdebase-data versions less than
    4:3.95.0 and not 3.95.0.
  * Fix 02_ksvgtopng4 and 03_ktrash4 patches.
  * Move the rest of drkonqi into kdebase-runtime-data and remove the package.
  * Move kinfocenter into a separate package.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 14 Nov 2007 22:33:53 +0100

kdebase-runtime (4:3.95.2-1) experimental; urgency=low

  * New upstream release.

  +++ Changes by Fathi Boudra:

  * Remove 01_knotify4_desktop patch. Merged upstream.